--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@etherspot/react-transaction-buidler": "^0.1.2",
+    "@etherspot/react-transaction-buidler": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,7 +31,7 @@
       "react-app/jest"
     ]
   },
-  "overrides": {
+  "resolutions": {
     "react-error-overlay": "6.0.9"
   },
   "browserslist": {
