--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@etherspot/react-transaction-buidler": "^0.5.7",
+    "@etherspot/react-transaction-buidler": "^0.5.12",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25",
-    "react-error-overlay": "^6.0.9"
+    "@types/styled-components": "^5.1.25"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   }
 }
