--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Etherspot BUIDLer example dapp",
+  "name": "Example dapp of Etherspot BUIDLer React Component using Etherspot SDK.",
   "icons": [
     {
       "src": "favicon.ico",
