--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "preinstall": "bash preinstall.sh",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
