--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@etherspot/react-transaction-buidler": "^0.21.0",    "@testing-library/jest-dom": "^5.16.4",
+    "@etherspot/react-transaction-buidler": "^0.21.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
