--- a/package.json
+++ b/package.json
@@ -11,16 +11,10 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@walletconnect/qrcode-modal": "^1.8.0",
-    "@web3auth/base": "^3.0.4",
-    "@web3auth/coinbase-adapter": "^3.0.4",
-    "@web3auth/core": "^3.0.4",
-    "@web3auth/metamask-adapter": "^3.0.4",
-    "@web3auth/modal": "^3.0.4",
-    "@web3auth/openlogin-adapter": "^3.0.4",
-    "@web3auth/torus-evm-adapter": "^3.0.4",
-    "@web3auth/ui": "^3.0.4",
-    "@web3auth/wallet-connect-v1-adapter": "^3.0.4",
+    "@web3auth/base": "^5.2.0",
+    "@web3auth/no-modal": "^5.2.0",
+    "@web3auth/openlogin-adapter": "^5.2.0",
+    "@web3auth/torus-evm-adapter": "^5.2.0",
     "ethers": "^5.6.9",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
@@ -61,6 +55,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
     "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
