--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react-icons": "^4.6.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.7.4",
-    "wagmi": "^0.11.6",
+    "typescript": "5.0.4",
+    "viem": "^1.2.9",
+    "wagmi": "^1.3.5",
     "web3": "^1.8.2"
   },
   "scripts": {
