--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@etherspot/react-transaction-buidler": "0.24.3",
+    "@etherspot/react-transaction-buidler": "git+https://github.com/etherspot/etherspot-react-transaction-buidler.git#fix/build-fix",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "5.0.4",
+    "viem": "^1.2.9",
     "wagmi": "^1.3.5",
     "web3": "^1.8.2"
   },
